--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<span>Total</span>
 					<span class="dollar">$41<sup>25</sup></span>
 				</div>
-				<img class="map" src="./img/map.jpg"> 
+				<img class="map" src="./img/map-and-pointer.jpg"> 
 			</div>
 			<form class="bill-form" method="post" name="bill-form">
 				<input type="text" required placeholder="Your name">
@@ -44,16 +44,11 @@
 			</form>
 		</section>
 		<section class="actions">
-			<a class="back round-btn" href="#">
-				<img src="./img/shevron.svg">
-			</a>
-			<button class="pay-now" type="submit" >
-				<img src="./img/wallet.svg">
+			<a class="back round-btn act-btn" href="#"></a>
+			<button class="pay-now act-btn" type="submit" >
 				<span>pay now</span>
 			</button>
-			<button type="reset" class="reset-fields round-btn">
-				<img src="./img/reset-field.svg">
-			</button>
+			<button type="reset" class="reset-fields round-btn act-btn"></button>
 		</section>
 	</main>	
 	
